# message_passing_on_cpp

./: MessagePassingModernCppExample.sln
MessagePassingModernCppExample/: BlockingCollection.h  CMakeLists.txt  MessagePassingModernCppExample.cpp  MessagePassingModernCppExample.vcxproj  MessagePassingModernCppExample.vcxproj.filters  ResourceManager.h
MessagePassingModernCppExample/observable/obs/: connection.cpp  signal.h
